# API-Statement-IntelliScan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  model_meta.json  pre_categ_vocab.json  pre_scaler.joblib  pre_tfidf.joblib  pyproject.toml
app/: main.py
app/api/: main.py
app/api/routes/: health.py  statements.py
app/configs/: env.py
app/core/: config.py  file.py  model.py
app/middlewares/: error_handling.py
app/models/: request.py  response.py
app/routers/: predicts.py
